styles/index.css
/* ... */
/*
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/hover
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/any-pointer
  - https://patrickhlauke.github.io/touch/pointer-hover-any-pointer-any-hover/results
  - https://css-tricks.com/interaction-media-features-and-their-potential-for-incorrect-assumptions
*/
/*
 * cursors
 *   - https://developer.mozilla.org/en-US/docs/Web/CSS/cursor
 *   - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/pointer
 */
@media (pointer: fine) { /* mouse */ }
@media (pointer: coarse) { /* finger */ }

@media screen and (min-width: 1000px) {
  :root { --max-width: 90vw }
}

/*
 * pseudo elements - https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements
 */
::before, ::after {
  /* https://stackoverflow.com/q/8820286/how-to-remove-only-underline-from-aafter */
  display: inline-block;
}

/*
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * - https://stackoverflow.com/a/16982510/7133471
 * - https://twitter.com/miketaylr/status/12228805301
 * - https://css-tricks.com/almanac/selectors/s/selection
 */

/* scrollbars */
::-webkit-scrollbar {
  /* entire scrollbar region */
  width: 1em;
  background-color: transparent;
}
::-webkit-scrollbar:hover {
 background-color: rgba(0,0,0,0.0618);
}
::-webkit-scrollbar-track {
  /* entire track region */
  background-color: transparent;
}
::-webkit-scrollbar-track:hover {
  background-color: transparent;
}
::-webkit-scrollbar-track-piece, ::-webkit-scrollbar-corner {
  /* track pieces */
  background: transparent;
}
::-webkit-scrollbar-track-piece:hover,
::-webkit-scrollbar-corner:hover {
  /* (unscrolled) track pieces */
  background-color: rgba(255,255,255,0.618);
}
::-webkit-scrollbar-thumb {
  /* scrollbar thumb */
  /* test scrollbar height */
  height: 30%;
  border-radius: 0.618em;
  outline: 0.1618em solid;
  outline-color: ButtonText;
  outline-offset: -0.1618em;
  background-color:  ButtonFace;
  border: .3em solid ButtonFace;
}
::-webkit-scrollbar-thumb:hover {
  outline-color: CurrentColor;
  background-color: CurrentColor;
}
/* https://developer.mozilla.org/en-US/docs/Web/CSS/::backdrop */
::backdrop { background-color: currentColor }
::-moz-selection {
  color: HighlightText;
  background: Highlight;
  border-radius: 2em;
}
::selection {
  color: currentColor;
  background: Highlight;
}
::-moz-focus-inner { /* Remove the inner border and padding of focus outlines in Firefox */
  padding: 0;
  border-style: none
}
/* Restore focus outline - https://github.com/necolas/normalize.css/issues/481 */
:-moz-focusring { outline: 1px dotted ButtonText }

html {
  color: CanvasText;
  color-scheme: light dark;
  background-color: Canvas;
}
/* SCROLL SNAPPING
  - https://w3.org/TR/css-scroll-snap-1
  - https://drafts.csswg.org/css-scroll-snap-1
  - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Scroll_Snap/Basic_concepts
*/
body {
  /* scroll-snap-type: y mandatory */
}
body > header, body > nav, body > main, body > aside, body > footer
  {color: CanvasText;background: Canvas}
body > header {}
body > nav {
  background: transparent;
  box-shadow: var(--box-shadow);
}
body > main { scroll-snap-align: start }
body > aside { background: ButtonFace }
body > footer {
  color: Canvas;
  background: GrayText;
}


/* PWA RELATED */
/* TODO: Use @supports - https://developer.mozilla.org/en-US/docs/Web/CSS/@supports */
/* https://developer.apple.com/library/archive/documentation/AppleApplications/Conceptual/SafariJSProgTopics/DragAndDrop.html#//apple_ref/doc/uid/30001233-178644 */
html, body {
  -webkit-user-drag: none; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: none; /* Webkit (Chrome all / Safari all) */
          user-select: none; /* https://caniuse.com/user-select-none */
  -webkit-touch-callout: none; /* Safari Touch - https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-touch-callout */
  -webkit-tap-highlight-color: transparent; /* https://davidwalsh.name/mobile-highlight-color */
}

body > main   { -webkit-overflow-scrolling: touch }
body > aside  { -webkit-transform: translatez(0) }
body > footer { -webkit-transform: translatez(0) }
/* https://ferdychristant.com/the-world-s-most-overlooked-web-optimization-for-ios-d88c7517d520 */
body > footer { -webkit-transform: translatez(0) }

a { -webkit-touch-callout: default }

iframe, pre, table, select[multiple] {
  /*
    - https://css-tricks.com/almanac/properties/s/scrollbar-gutter
    - https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
    - https://bram.us/2021/07/23/prevent-unwanted-layout-shifts-caused-by-scrollbars-with-the-scrollbar-gutter-css-property
  */
  scrollbar-gutter: stable both-edges;
 }

pre code, var, p, cite, blockquote, address
/* ... and all id-entifiable headers ... */
, header[id], h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: text; /* Webkit (Chrome all / Safari all) */
          user-select: text; /* https://caniuse.com/mdn-css_properties_user-select_text */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}

code, data, kbd, mark, pre, q, samp, var {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: all; /* Webkit (Chrome all / Safari all) */
          user-select: all; /* https://caniuse.com/mdn-css_properties_user-select_all */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}

pre::selection, code::selection {
  -webkit-tap-highlight-color: Mark; /* https://davidwalsh.name/mobile-highlight-color */
}
/* ... */

